[project]
name = "safespace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.3",
    "langchain>=1.3.2",
    "langchain-core>=0.3.0",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.2.2",
    "langgraph>=0.2.0",
    "ollama>=0.6.2",
    "pydantic>=2.13.4",
    "requests>=2.34.2",
    "streamlit>=1.57.0",
    "twilio>=9.10.9",
    "uvicorn>=0.30.0",
]
